firstRunFiles/iptables
# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT - [0:0]
#-A INPUT -j INPUT
#-A FORWARD -j INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -p 50 -j ACCEPT
-A INPUT -p 51 -j ACCEPT
-A INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A INPUT -p udp -m udp --dport 631 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 5555 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 7777 -j ACCEPT
# accept nagios nrpe (5666) from ...
# yar.ess.washington.edu
#-A INPUT -p tcp -m tcp --dport 5666 -s 128.208.21.38/32 --syn -j ACCEPT
# and ess p172 for nagios.ess.washington.edu
#-A INPUT -p tcp -m tcp --dport 5666 -s 205.175.123.21 --syn -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
