firstRunFiles/iptables.rules
# Completed on Thu Aug  2 21:14:33 2012
# Generated by iptables-save v1.4.9.1 on Thu Aug  2 21:14:33 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -p ah -j ACCEPT 
-A INPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT 
-A INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -p udp --dport 123 -j ACCEPT
-A OUTPUT -p udp --sport 123 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 5555 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6234 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Aug  2 21:14:33 2012
